2004-02-17  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Another NULL test before an xmlFree, suggested by William Brack.

2004-02-16  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-toc.xsl:
	- Changed $cols to {$cols}, so that it'll actually work. :/

2004-02-16  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Patch from DV to stop mixing malloc and free wrappers from glib and
	  libxml2.  Fixes a crash with latest libxslt.

2004-02-16  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Patch from Julio M. Merino Vidal for portable sed usage (#134534)

2004-02-15  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Fixed memory leak.

2004-02-12  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Disconnect idle_write when closing a window or switching to a different
	  page, because some people apparently don't like Yelp to crash.

2004-02-12  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Don't crash when the window is closed before the transformation is
	  finished, from Jan Arne Petersen.  (#134266)

2004-02-11  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-synopsis.xsl:
	* test/testdoc1/testdoc1.xml:
	- More cmdsynopsis work.

2004-02-10  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-header.xsl:
	* stylesheets/db2html-synopsis.xsl:
	- Some work on cmdsynopsis.

2004-02-10  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Version 2.5.5

	* po/*.po
	- distcheck stuff

2004-02-09  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-navbar.xsl:
	- Fixed theoretical bug which never gets triggered in navbar.next.

2004-02-09  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-header.xsl:
	- Speed improvements of about 0.1s on the UG.

2004-02-08  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-toc.xsl:
	- Rather smallish speed improvement.

2004-02-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-html-gtkhtml2.c:
	* src/yelp-window.c: