@@ -28,9 +28,19 @@
 			<affiliation> 
 				<orgname>GNOME Documentation Project</orgname> 
 				<address><email>shaunm@gnome.org</email></address> 
-			</affiliation> 
+			</affiliation>
+			<email>shaunm@gnome.org</email>
 		</author> 
 	</authorgroup>
+
+	<othercredit>
+		<firstname>Shaun</firstname>
+		<othername>W</othername>
+		<surname>McCance</surname>
+		<address>
+			<email>shaunm@gnome.org</email>
+		</address>
+	</othercredit>
 
 	<revhistory>
 	  <revision>
